src/objects/Apttus__WizardRuleset__c.object
<CustomObject>
    <description>A collection of rules that are applied to input control and steps. The system determines a ruleset at the level of input control expression formula, determine focus objects, record type and step navigation rules.</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signifies that the Ruleset within a step is Active. Setting Wizard Design as Active automatically activates the included rulesets.</description>
        <inlineHelpText>Signifies that the Ruleset within a step is Active. Setting Wizard Design as Active automatically activates the included rulesets.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__AdvancedExpression__c</fullName>
        <description>Advanced expression that allows combination of AND and OR operators on rules.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Advanced expression that allows combination of AND and OR operators on rules.</inlineHelpText>
        <label>Advanced Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContextObject__c</fullName>
        <description>Name of the object when the rule is of type &apos;Determine Focus Object&apos; or &apos;Determine Record Type&apos;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Name of the object when the rule is of type &apos;Determine Focus Object&apos; or &apos;Determine Record Type&apos;</inlineHelpText>
        <label>Context Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__InputResponseRuleType__c</fullName>
        <description>Supports only rule of type &apos;Input Expression&apos;</description>
        <inlineHelpText>Supports only rule of type &apos;Input Expression&apos;</inlineHelpText>
        <label>Input Response Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Input Expression</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__RecordType__c</fullName>
        <description>Record type that corresponds to the record types for the object</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Record type that corresponds to the record types for the object</inlineHelpText>
        <label>Record Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ResultantValue__c</fullName>
        <description>The value that is determined by the condition being met.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The value that is determined by the condition being met.</inlineHelpText>
        <label>Resultant Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__RuleExpressionRuleType__c</fullName>
        <description>Rule types that can be used for navigating the runtime wizard flow, determining the focus object and record type.</description>
        <inlineHelpText>Rule types that can be used for navigating the runtime wizard flow, determining the focus object and record type.</inlineHelpText>
        <label>Rule Expression Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Go To Input</fullName>
                </value>
                <value>
                    <fullName>Go To Step</fullName>
                </value>
                <value>
                    <fullName>Determine Focus Object</fullName>
                </value>
                <value>
                    <fullName>Determine Record Type</fullName>
                </value>
                <value>
                    <fullName>Go To URL</fullName>
                </value>
                <value>
                    <fullName>Go To Submit</fullName>
                </value>
                <value>
                    <fullName>Next Step</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>Sequence of the ruleset within the step it belongs to.</description>
        <inlineHelpText>Sequence of the ruleset within the step it belongs to.</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__SubRecordtype__c</fullName>
        <description>The subtype of object record this ruleset applies to</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The subtype of object record this ruleset applies to</inlineHelpText>
        <label>SubRecordtype</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ToWizardId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Not currently used. Will be available in a future release, applicable to rule type &apos;Go To Wizard&apos;.</description>
        <inlineHelpText>Not currently used. Will be available in a future release, applicable to rule type &apos;Go To Wizard&apos;.</inlineHelpText>
        <label>Go To Wizard</label>
        <referenceTo>Apttus__Wizard__c</referenceTo>
        <relationshipName>WizardRulesets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ToWizardInputControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Applicable to rule type &apos;Go To Input&apos;.</description>
        <inlineHelpText>Applicable to rule type &apos;Go To Input&apos;.</inlineHelpText>
        <label>Go To Wizard Input Control</label>
        <referenceTo>Apttus__WizardInputControl__c</referenceTo>
        <relationshipName>WizardRulesets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ToWizardStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Applicable to rule type &apos;Go To Step&apos;.</description>
        <inlineHelpText>Applicable to rule type &apos;Go To Step&apos;.</inlineHelpText>
        <label>Go To Wizard Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>WizardRulesets2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Transient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ruleset added to a step is in Transient state till the Step is saved.</description>
        <inlineHelpText>Ruleset added to a step is in Transient state till the Step is saved.</inlineHelpText>
        <label>Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardInputControlId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Wizard Input Control</description>
        <inlineHelpText>Lookup to Wizard Input Control</inlineHelpText>
        <label>Wizard Input Control</label>
        <referenceTo>Apttus__WizardInputControl__c</referenceTo>
        <relationshipName>WizardRulesets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__WizardStepId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Wizard Step this ruleset belongs to</description>
        <inlineHelpText>Lookup to Wizard Step this ruleset belongs to</inlineHelpText>
        <label>Wizard Step</label>
        <referenceTo>Apttus__WizardStep__c</referenceTo>
        <relationshipName>Wizard_Rulesets3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Wizard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Wizard this Ruleset is related to</description>
        <inlineHelpText>The Wizard this Ruleset is related to</inlineHelpText>
        <label>Wizard</label>
        <referenceTo>Apttus__Wizard__c</referenceTo>
        <relationshipName>Wizard_Rulesets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Wizard Ruleset (Deprecated)</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Active__c</columns>
        <columns>Apttus__RecordType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Wizard Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>